--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -23,16 +23,12 @@
   <string name="demo_title_right_to_left">RTL support</string>
   <string name="demo_title_advanced_medium">Advanced: Like a Medium Tag (since 1.2~)</string>
 
-  <string name="demo_tab_1">Cupcake</string>
-  <string name="demo_tab_2">Donut</string>
-  <string name="demo_tab_3">Eclair</string>
-  <string name="demo_tab_4">Froyo</string>
-  <string name="demo_tab_5">Gingerbread</string>
-  <string name="demo_tab_6">Honeycomb</string>
-  <string name="demo_tab_7">Ice Cream Sandwich</string>
-  <string name="demo_tab_8">Jelly Bean</string>
-  <string name="demo_tab_9">KitKat</string>
-  <string name="demo_tab_10">Lollipop</string>
+  <string name="demo_tab_1">フォロー中</string>
+  <string name="demo_tab_2">コミック</string>
+  <string name="demo_tab_3">音楽</string>
+  <string name="demo_tab_4">お笑い</string>
+  <string name="demo_tab_5">映画</string>
+  <string name="demo_tab_6">ステージ</string>
 
   <string name="demo_tab_no_title">No Title</string>
   <string name="demo_tab_like_a_medium_top">Top</string>
